<resources>
    <string name="app_name">Auto Courier</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="google_signin">Sign in with Google</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="dashboard">Dashboard</string>
    <!-- Google Sign-In client ID placeholder: replace with your Web Client ID -->
    <string name="default_web_client_id" translatable="false">490025129808-kcenrcog9o7stfj53leg8rojr0iaeiu6.apps.googleusercontent.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_instructions">
    We have sent a verification email to your <b>registered address</b>. Please follow the instructions in the email to verify your account.\n\n
    <b>Missing the email?</b>\n
    Kindly check your spam folder and mark it as <b>"Not Spam"</b>.
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>